# mpi

./: .gitignore  CMakeLists.txt  a.out  file  some.job  test.cpp
.trash/: test.c
.trash/lib/: array.c  array.h  quicksort.c  quicksort.h
.trash/mpi/: main.c  root.c  root.h  worker.c  worker.h
cmake/doc/cmake/html/: genindex.html  index.html  objects.inv  search.html  searchindex.js
cmake/doc/cmake/html/command/: add_compile_options.html  add_custom_command.html  add_custom_target.html  add_definitions.html  add_dependencies.html  add_executable.html  add_library.html  add_subdirectory.html  add_test.html  aux_source_directory.html  break.html  build_command.html  build_name.html  cmake_host_system_information.html  cmake_minimum_required.html  cmake_policy.html  configure_file.html  continue.html  create_test_sourcelist.html  ctest_build.html  ctest_configure.html  ctest_coverage.html  ctest_empty_binary_directory.html  ctest_memcheck.html  ctest_read_custom_files.html  ctest_run_script.html  (+90 more)
cmake/man/man1/: ccmake.1  cmake-gui.1  cmake.1  cpack.1  ctest.1
cmake/man/man7/: cmake-buildsystem.7  cmake-commands.7  cmake-compile-features.7  cmake-developer.7  cmake-generator-expressions.7  cmake-generators.7  cmake-language.7  cmake-modules.7  cmake-packages.7  cmake-policies.7  cmake-properties.7  cmake-qt.7  cmake-toolchains.7  cmake-variables.7
generate/: file  file.npy  generate.py
lib/: CMakeLists.txt  quicksort.cpp  quicksort.h
mpi/: CMakeLists.txt  job.cpp  job.h  main.cpp  root.cpp  root.h  worker.cpp  worker.h
simple/: quicksort.cpp  test.cpp
(+1041 files in other folders)
